[build-system]
requires = [
    "hatchling",
     "Sphinx",
     "typer[all]",
     "pytest",
     "cryptography"
    ]
build-backend = "hatchling.build"

[project]
name = "Clypher"
version = "0.4"
authors = [
  { name="Maximiliano Cancelarich", email="maximilianoacan@gmail.com" },
]
description = "Encrypt and decrypt from the command line."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/maxacan/clypher"
Issues = "https://github.com/maxacan/clypher/issues"